--- a/package.json
+++ b/package.json
@@ -15,7 +15,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint \"**/*.{js,jsx}\"",
+    "lint:css": "stylelint \"src/**/*.{css,scss}\"",
+    "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{css,scss}": [],
+    "*.{js,jsx}": []
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +55,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "lint-staged": "^15.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
