--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "eject": "react-scripts eject",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:js": "eslint \"**/*.{js,jsx}\"",
-    "lint:css": "stylelint \"src/**/*.{css,scss}\"",
+    "lint:css": "stylelint \"src/**/*.scss\"",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{css,scss}": [],
-    "*.{js,jsx}": []
+    "*.{css,scss}": [
+      "stylelint --fix"
+    ],
+    "*.{js,jsx}": [
+      "eslint --fix"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -48,14 +52,22 @@
     "@babel/core": "^7.23.2",
     "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/preset-env": "^7.22.14",
     "@babel/preset-react": "^7.22.15",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "babel-jest": "^29.6.4",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
+    "sass": "^1.66.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
