--- a/package.json
+++ b/package.json
@@ -68,9 +68,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
     "sass": "^1.66.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0"
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^11.0.0"
   }
 }
