--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,1 +1,10 @@
-{ "extends": ["stylelint-config-standard", "stylelint-config-standard-scss"] }
+{
+  "extends": ["stylelint-config-standard", "stylelint-config-standard-scss"],
+  "plugins": ["stylelint-scss"],
+  "rules": {
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
+    "scss/dollar-variable-pattern": "^foo",
+    "scss/selector-no-redundant-nesting-selector": true
+  }
+}
